# NoPay

./: .env.local  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  celery_beat_dockerfile  celery_dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
src/: celery-beat-entrypoint.sh  celery-entrypoint.sh  django-entrypoint.sh  manage.py
src/advertisement/: admin.py  models.py  serializers.py  service.py  urls.py  views.py
src/advertisement/migrations/: 0001_initial.py  0002_payout_balance.py
src/common/: __init__.py  docstring_exc.py  order_by_payment_datetime.py
src/feature_toggles/: admin.py  apps.py  models.py
src/feature_toggles/migrations/: 0001_initial.py  0002_featuretoggle_description.py  0003_alter_featuretoggle_description.py
src/file_service/: __init__.py  errors.py  file_repo.py  file_service.py  minio_factory.py  parse_qrcode.py
src/image_service/: __init__.py  errors.py  file_repo.py  img_service.py  minio_factory.py  parse_qrcode.py
src/nopay/: asgi.py  celery.py  middleware.py  settings.py  urls.py  wsgi.py
src/parsing_utils/: errors.py  parse_minsktrans_token.py  parse_reg_sign.py
src/qrcode_app/: __init__.py  admin.py  consumers.py  errors.py  models.py  permissions.py  qrcode_service.py  serializers.py  tasks.py  urls.py  views.py
src/qrcode_app/migrations/: 0001_initial.py  0002_qrcode_users.py  0003_qrcodeprocessingstatus.py  0004_qrcodeprocessingstatus_was_seen_by_user.py
src/user_auth/: serializers.py  urls.py  views.py
